[package]
name = "mote"
version = "0.1.2"
keywords = ["led", "raspberry", "pi", "mote", "strip"]
repository = "https://github.com/tiziano88/mote-rs"
homepage = "https://github.com/tiziano88/mote-rs"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
documentation = "https://tiziano88.github.io/mote-rs/mote/index.html"
license = "MIT"
description = """
Mote library.
"""

[dependencies]
serial = "0.4"
serial-unix = "0.4"
rgb = "0.8"

[dev-dependencies]
rand = "0.7"
getopts = "0.2"
palette = "0.4"
